argo/apps/media/glue tun-transmission/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transmission
  template:
    metadata:
      labels:
        app: transmission
    spec:
      # required for VPN container
      securityContext:
        capabilities:
          add: ["NET_ADMIN"]
      containers:
      - name: gluetun
        image: qmcgaw/gluetun:latest
        ports:
          - name: transmission
            containerPort: 9091
        volumeMounts:
          - name: config
            mountPath: /gluetun
      - name: transmission
        image: linuxserver/transmission:latest
        ports:
          - name: rpc
            containerPort: 9091
        volumeMounts:
          - name: config
            mountPath: /config
      volumes:
        - name: config
          emptyDir: {}
