argo/apps/media/glue tun-transmission/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission
  namespace: media
spec:
  selector:
    app: transmission
  ports:
    - protocol: TCP
      port: 9091
      targetPort: 9091
