argo/apps/media/glue tun-transmission/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: transmission
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`transmission.smeyer.ca`)
      kind: Rule
      services:
        - name: transmission
          port: 80
#  tls:
 #   certResolver: letsencrypt
